fix tab trigger jump

--- a/src/components/Cards/cards.module.css
+++ b/src/components/Cards/cards.module.css
@@ -58,7 +58,7 @@
   }
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 600px) {
   .cardsWrapper {
     grid-template-columns: repeat(1, 1fr) !important;
     margin-top: 0;
